@@ -2,15 +2,13 @@ package io.github.moehreag.branding;
 
 import net.minecraft.client.MinecraftClient;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.util.Objects;
 import java.util.UUID;
-import javax.net.ssl.HttpsURLConnection;
+import java.util.concurrent.CompletableFuture;
 
 
 public class NetworkHelper {
@@ -27,41 +25,35 @@ public class NetworkHelper {
 	public static boolean getUser(UUID uuid){
 
 		try{
-			URL url = new URL("https://moehreag.duckdns.org/axolotlclient-api?uuid="+uuid);
-			HttpsURLConnection client = (HttpsURLConnection) url.openConnection();
 
-			System.out.println("RETURN : "+client.getRequestMethod() + client.getResponseCode());
+			final HttpClient client = HttpClient.newBuilder().build();
+			HttpRequest request = HttpRequest.newBuilder()
+				.GET()
+				.uri(URI.create("https://moehreag.duckdns.org/axolotlclient-api/?uuid="+uuid))
+				.build();
 
-			try (BufferedReader in = new BufferedReader(new InputStreamReader(client.getInputStream()))) {
-				StringBuilder response = new StringBuilder();
-				String line;
+			CompletableFuture<HttpResponse<String>> response = client.sendAsync(request, HttpResponse.BodyHandlers.ofString());
 
+			String body = response.thenApply(HttpResponse::body).get();
 
-				while ((line = in.readLine()) != null) {
-					response.append(line).append("\n");
-				}
-				System.out.println(response);
-				if (response.toString().contains("\"online\":true")){
-					Axolotlclient.onlinePlayers  = Axolotlclient.onlinePlayers + " " + uuid.toString();
-					System.out.println(Axolotlclient.onlinePlayers);
-
-					return true;
-				}
+			if (body.contains("true")){    //(response.toString().contains("true")){
+				Axolotlclient.onlinePlayers  = Axolotlclient.onlinePlayers + " " + uuid;
+				//System.out.println(Axolotlclient.onlinePlayers);
+				return true;
 			}
-			System.out.println("Online Players: "+ Axolotlclient.onlinePlayers);
-			System.out.println(Axolotlclient.onlinePlayers);
+
 		} catch (Exception ex){
 			ex.printStackTrace();
 		}
 
 		Axolotlclient.otherPlayers = Axolotlclient.otherPlayers + " " + uuid.toString();
-		System.out.println("Other Players: "+Axolotlclient.otherPlayers);
+		//System.out.println("Other Players: "+Axolotlclient.otherPlayers);
 		return false;
 	}
 
 	public static void setOnline() {
 
-		UUID uuid = MinecraftClient.getInstance().player.getUuid();
+		UUID uuid = Objects.requireNonNull(MinecraftClient.getInstance().player).getUuid();
 
 		try {
 			HttpRequest request = HttpRequest.newBuilder()
@@ -72,35 +64,22 @@ public class NetworkHelper {
 			HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
 			//System.out.println(response.body());
 			if(!response.body().contains("Success!")){
+				System.out.println("Sucessfully logged in at Axolotlclient!");
 			}
 		} catch (Exception e) {System.out.println("Exception");}
 	}
 
 	public static void setOffline(){
 
-		UUID uuid = MinecraftClient.getInstance().player.getUuid();
+		UUID uuid = Objects.requireNonNull(MinecraftClient.getInstance().player).getUuid();
 
 		try{
-			URL url = new URL("https://moehreag.duckdns.org/axolotlclient-api?uuid="+uuid);
-			HttpsURLConnection client = (HttpsURLConnection) url.openConnection();
+			HttpRequest request = HttpRequest.newBuilder()
+				.uri(URI.create("https://moehreag.duckdns.org/axolotlclient-api?uuid="+uuid))
+				.method("DELETE", HttpRequest.BodyPublishers.noBody())
+				.build();
 
-			client.setRequestMethod("DELETE");
-			client.setRequestProperty("Content-Type", "application/json; utf-8");
-			client.setRequestProperty("Accept", "application/json");
-			client.setDoOutput(true);
-
-			//System.out.println("RETURN : "+client.getResponseCode());
-
-			try (BufferedReader in = new BufferedReader(new InputStreamReader(client.getInputStream()))) {
-				StringBuilder response = new StringBuilder();
-				String line;
-
-
-				while ((line = in.readLine()) != null) {
-					response.append(line).append("\n");
-				}
-				//System.out.println(response);
-			}
+			HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
 
 		} catch (Exception ex){
 			ex.printStackTrace();
